feat: implemet sliding window algo
